--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* index.css */
+
 
 
 input[type="text"],input[type="password"],input[type="email"],input[type="number"],input[type="tel"], textarea
