--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@
 
 input[type="text"],input[type="password"],input[type="email"],input[type="number"],input[type="tel"], textarea
 {
-@apply w-full border my-2 py-2 px-4 rounded-xl;
+@apply w-full border my-2 py-1 px-2 rounded-lg;
 }
 textarea {
     height: 170px;
